--- a/LikeFunction/Likefunction.html
+++ b/LikeFunction/Likefunction.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
+<html>
 <head>
-  <!-- 좋아요 버튼 css 연결 -->
-  <link href="Likefunction.css" rel="stylesheet" type="text/css" />
-  <script src="https://kit.fontawesome.com/b1b54c5e3c.js" crossorigin="anonymous"></script>
+    <!-- 좋아요 버튼 css 연결 -->
+    <link href="./LikeFunction.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <!-- 좋아요 버튼 -->
-  <button class="like_btn">
-    <span id="icon"><i class="far fa-thumbs-up"></i></span>
-    <span id="count">0</span> Like
-  </button>
-  <form name="from">
-    <input type="button" value="좋아요" onclick="test_1();">
-  </form>
-
-  <!-- 좋아요 버튼 js 연결 -->
-  <script src="Likefunction.js"></script>
+    <!-- 좋아요 버튼 -->
+    <button class="like_btn"> <span id="count">0</span> Like</button>
+    
+    <!-- 좋아요 버튼 js 연결 -->
+    <script src="./LikeFunction.js" type="text/javascript"></script>
 </body>
 </html>
