--- a/Board/view2.html
+++ b/Board/view2.html
@@ -41,15 +41,17 @@
 <br><br>
 <h4>1.비밀번호를 반드시 적으셔야 합니다!</h4>
 <br>
-<h4>2.게시글 수정 시 반드시 비밀번호를 입력해 주세요</h4>
+<h4>2.게시글 수정 시 반드시 비밀번호를 입력해 주세요.</h4>
 <br>
 <h4>3.비밀번호는 숫자 4자리로 구성됩니다.</h4>
 <br>
+<h4>4.욕설 부적절한 게시글은 강제로 삭제 될 수 있습니다.</h4>
+<br>
+
                 </div>
             </div>
             <div class="bt_wrap">
                 <a href="list.html" class="on">목록</a>
-                <a href="edit.html">수정</a>
             </div>
         </div>
     </div>
