--- a/Board/write.html
+++ b/Board/write.html
@@ -9,6 +9,7 @@
     <title>게시판</title>
     <link rel="stylesheet" href="css/css.css">
     <script type="text/javascript" src="js/write.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <style>
         #input1{
             width:100px;
@@ -20,24 +21,9 @@
 
         }
     </style>
-    <script >
-        var title1 = document.getElementById("title");
-        var write1 = document.getElementById("write");
-        var number1 = document.getElementById("number");
-        var contents1 = document.getElementById("contents");
-        var input1=document.getElementById("input1");
 
-        $('#input1').click( function() {
-
-            if (title1.value==""||write1.value==""||number1.value==""||contents1.value=="") {
-                alert("입력이 되지 않은 사항이 있습니다.");
-            }
-        });
-
-    </script>
-</head>
 <body>
-<form method="post" action="js/writeation.js">
+<form name=f action="#">
     <div class="board_wrap">
         <div class="board_title">
             <strong>선문대 축제</strong>
@@ -48,17 +34,17 @@
                 <div class="title">
                     <dl>
                         <dt>제목</dt>
-                        <dd><input type="text" placeholder="제목을 입력해주세요!" id="title"  value="" ></dd>
+                        <dd><input type="text" placeholder="제목을 입력해주세요!" id="title" name="title" value="" ></dd>
                     </dl>
                 </div>
                 <div class="info">
                     <dl>
                         <dt>글쓴이</dt>
-                        <dd><input type="text" placeholder="글쓴이 입력" id="writer"></dd>
+                        <dd><input type="text" placeholder="글쓴이 입력" id="writer" name="writer" value=""></dd>
                     </dl>
                          <dl>
                         <dt>비밀번호</dt>
-                        <dd><input type="text" placeholder="비밀번호를 입력해주세요!" id="number" maxlength="4"></dd>
+                        <dd><input type="text" placeholder="비밀번호를 입력해주세요!" id="number" name="number" maxlength="4"value="" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" ></dd>
                     </dl>
                 </div>
                 <div class="cont">
@@ -66,25 +52,55 @@
                 </div>
             </div>
             <div class="bt_wrap">
-                <input type="submit" id="input1" value="등록" >
-                
-                <div class>
-
-                    <!--  등록 버튼을 눌렀을 때
-                        해당 신호를 받을 경우 서버에 보내서
-                        들어가도록 해야함
-                        이 들어간 것을
-                        보여주는 루틴으로 진행
-
-                        
-                    -->
-
-                </div>
-
+                <a href="list.html" class="on" onclick="sub1()">등록</a>
                 <a href="list.html" class="on">취소</a>
             </div>
         </div>
     </div>
 </form>
 </body>
+
+
+<script>
+
+    var writer1 =document.f.writer.value;
+    var number1 = document.f.number.value;
+    var  title1 =document.f.title.value;
+    var  contents1 =document.f.contents.value;
+
+
+function sub1(){
+    if(document.f.writer.value=="")
+    {
+        alert("이름을 입력하세요");
+    }
+
+    if(document.f.number.value=="")
+    {
+        alert("비밀번호를 입력하시오");
+    }
+
+    if(document.f.title.value=="")
+    {
+        alert(" 제목을 입력하시오");
+    }
+
+    $.ajax({
+        url:"site.smfestival.site/post/",
+        method:'POST',
+        dataType:'application/json',
+        data:{
+            author: "writer1",
+            description: "contents1",
+            pw: "number1",
+            title: "title1"
+        }
+        });
+
+}
+
+
+
+
+</script>
 </html>
